force-app/main/default/objects/Bank__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <label>AccountName</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>