force-app/main/default/objects/Bank__c/fields/BankAddress__c.field-meta.xml
<CustomField>
    <fullName>BankAddress__c</fullName>
    <label>BankAddress</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>