force-app/main/default/objects/Bank__c/fields/IFSC__c.field-meta.xml
<CustomField>
    <fullName>IFSC__c</fullName>
    <label>IFSC</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>