force-app/main/default/objects/Bank__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <label>Transaction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>